Fixed overflow-x and scroll snap on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -296,6 +296,20 @@ section {
 }
 
 @media only screen and (max-width: 650px) {
+
+  html {
+    scroll-behavior: smooth;
+    scroll-snap-type: y proximity;
+    overflow-x: hidden;
+  }
+
+  section {
+    overflow: hidden;
+    scroll-margin-top: 0px;
+    scroll-snap-align: start;
+  }
+
+
   .navigation-bar {
     margin-left: -2vw;
 
